Fix [#30351] Solidify Modifier High Quality Normals fails.

Don't really know why, but appears we need to recalc normals when this option is ON.

Also small perf improvement (avoid to compute twice each face normals).